fix prtogen
